<resources>
    <string name="app_name">The Vault</string>
    <string name="Cargando">Cargando...</string>
    <string name="InicioDeSesion_Guardar">Mantener sesión iniciada</string>
    <string name="InicioDeSesion_Password">Password</string>
    <string name="InicioDeSesion_Salir">Salir</string>

    <string name="Perfil_Comentarios">Comentarios</string>
    <string name="DatosDeUsuario_usermane">Username</string>
    <string name="DatosDeUsuario_nombre">Nombre</string>
    <string name="DatosDeUsuario_correo">Correo</string>
    <string name="DatosDeUsuario_contrasenia">Contraseña</string>
    <string name="DatosDeUsuario_fecha">Fecha de Nacimiento</string>
    <string name="DatosDeUsuario_fecha_reg">Fecha de Registro</string>
    <string name="Botones_editar">Editar</string>
    <string name="Botones_eliminar">Eliminar</string>
    <string name="General_calificacion">Calificación</string>
    <string name="General_comentario">Comentario</string>

    <string name="RegistroDeUsuario_registrar">Registrarse</string>
    <string name="RegistroDeUsuario_avatar">Selecciona un Avatar de perfil</string>
    <string name="InicioDeSesion_iniciarSesion">Iniciar Sesión</string>
    <string name="InicioDeSesion_registro">¿No tienes cuenta?, Da click aquí y regístrate</string>
    <string name="VisualizacionDePelicula_direccion">Dirección</string>
    <string name="VisualizacionDePelicula_genero">Género</string>
    <string name="VisualizacionDePelicula_duracion">Duración</string>
    <string name="VisualizacionDePelicula_anio">Año</string>
    <string name="VisualizacionDePelicula_pais">País</string>

    <string name="VisualizacionDePelicula_reparto">Reparto</string>
    <string name="VisualizacionDePelicula_comentarios">Comentarios</string>
    <string name="VisualizacionDePelicula_agregar">Agregar Comentario</string>
    <string name="AgregarModificarComentario_encabezado">Agregar comentario</string>
    <string name="AgregarModificarComentario_agregarTitulo">Agregar titulo</string>
    <string name="AgregarModificarComentario_agregarOpinion">Agregar opinión</string>

    <string name="AgregarModificarComentario_publicar">Publicar</string>
    <string name="FichaTecnicaStaff_nacionalidad">Nacionalidad</string>
    <string name="FichaTecnicaStaff_sexo">Sexo</string>
    <string name="PerfilDeUsario_tarjetaComentario">Película</string>
    <string name="EdicionPerfilDeUsario_cambios">Confirmar cambios</string>
    <string name="Menu_perfil">Perfil</string>
    <string name="Menu_cerrarSesion">Cerrar Sesión</string>

    <string name="Pelicula_direccion">Dirección</string>
    <string name="Pelicula_premios">Premios</string>
    <string name="Pelicula_duracion">Duración</string>
    <string name="Pelicula_año">Año</string>
    <string name="Pelicula_pais">País</string>
    <string name="Pelicula_calificacion">Calificación</string>
    <string name="Pelicula_reparto">Reparto</string>
    <string name="Pelicula_comentar">Comentar</string>
    <string name="Pelicula_comentarios">Comentarios</string>

    <string name="AgregarComentario_agregarComentario">Agregar comentario</string>
    <string name="AgregarComentario_editarComentario">Editar comentario</string>
    <string name="AgregarComentario_agregarTitulo">Agregar título</string>
    <string name="AgregarComentario_agregarOpinion">Agregar opinión</string>

    <string name="Funciones_funcionesTitutlo">Funciones</string>
    <string name="Funciones_horario">Horario</string>
    <string name="Funciones_sala">Sala</string>
    <string name="Funciones_asientosOcupados">Asientos ocupados</string>

    <string name="Perfil_boletosComprados">Boletos Comprados</string>
    <string name="Perfil_peliculaBoleto">Película</string>
    <string name="Perfil_FuncionBoleto">Función</string>
    <string name="Perfil_AsientosBoleto">Asientos</string>
    <string name="Perfil_idBoleto">Id</string>
    <string name="Perfil_verBoleto">Ver</string>

    <string name="Boleto_titulo">Boleto</string>

    <string name="title_activity_feed_prueba">FeedPrueba</string>
    <string name="tab_cartelera">Cartelera</string>
    <string name="tab_foro">Foro</string>
    <string name="title_activity_feed2">Feed2</string>

    <string name="tituloPelicula">Título</string>
    <string name="duracion">Duración</string>
    <string name="paisOrigen">País de origen</string>
    <string name="imagen">Imagen asociada</string>
    <string name="fechaDeEstreno">Estreno</string>
    <string name="enProyeccion">Está en proyección</string>
    <string name="agregarPelicula">Agregar película</string>
    <string name="modificarPelicula">Modificar película</string>
    <string name="eliminarPelicula">Eliminar película</string>

    <string name="modificarStaff">Modificar staff</string>
    <string name="agregarStaff">Agregar staff</string>
    <string name="eliminarStaff">Eliminar staff</string>
    <string name="nombreStaff">Nombre</string>
    <string name="nacionalidadStaff">Nacionalidad</string>
    <string name="nacimientoStaff">Fecha de nacimiento</string>
    <string name="sexoStaff">Sexo</string>
    <string name="imagenStaff">Imagen</string>
    <string name="rolStaff">Rol</string>

    <string name="modificarPremio">Modificar premio</string>
    <string name="agregarPremio">Agregar premio</string>
    <string name="eliminarPremio">Eliminar premio</string>
    <string name="categoriaPremio">Categoria</string>
    <string name="fechaPremio">Fecha</string>
    <string name="lugarPremio">Lugar</string>
    <string name="academiaPremio">Academia</string>
    <string name="hombreStaff">Hombre</string>
    <string name="mujerStaff">Mujer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>