<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primario_oscuro"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/secundario_oscuro"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="171dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_the_vault" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="267dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_edittext"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/DatosDeUsuario_usermane"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/secundario_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="267dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_edittext"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/InicioDeSesion_Password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/secundario_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

    <CheckBox
        android:id="@+id/cbGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/InicioDeSesion_Guardar"
        android:textColor="@color/primario_texto"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro">

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_button"
            android:onClick="ingresarFeed"
            android:text="@string/InicioDeSesion_iniciarSesion"
            android:textAllCaps="false"
            android:textColor="@color/primario_texto" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_button"
            android:onClick="salirApp"
            android:text="@string/InicioDeSesion_Salir"
            android:textAllCaps="false"
            android:textColor="@color/primario_texto" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/InicioDeSesion_registro"
        android:textColor="@color/primario_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbGuardar" />
</androidx.constraintlayout.widget.ConstraintLayout>