<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primario_oscuro"
    android:onClick="eliminarPelicula"
    tools:context=".AdministradorPeliculaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAdminPeliculaAccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/agregarPelicula"
                android:textColor="@color/primario_texto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtAdminPeliculaTitulo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/circle_edittext"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/tituloPelicula"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/primario_texto"
                android:textColorHint="@color/primario_texto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtAdminPeliculaDuracion"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/circle_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/duracion"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/primario_texto"
                    android:textColorHint="@color/primario_texto" />

                <EditText
                    android:id="@+id/txtAdminPeliculaEstreno"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/circle_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/fechaDeEstreno"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/primario_texto"
                    android:textColorHint="@color/primario_texto" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtAdminPeliculaPais"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/circle_edittext"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/paisOrigen"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/primario_texto"
                android:textColorHint="@color/primario_texto"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="229dp" />

            <EditText
                android:id="@+id/txtAdminPeliculaImagen"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/circle_edittext"
                android:ems="10"
                android:hint="@string/imagen"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/primario_texto"
                android:textColorHint="@color/primario_texto" />

            <CheckBox
                android:id="@+id/chkAdminPeliculaProyeccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="25dp"
                android:text="@string/enProyeccion"
                android:textColor="@color/primario_texto" />

            <Button
                android:id="@+id/btnAdminPeliculaAccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/circle_button"
                android:gravity="center"
                android:onClick="accionPelicula"
                android:text="@string/agregarPelicula"
                android:textColor="@color/primario_texto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAdminPeliculaStaff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_button"
                    android:onClick="irAStaff"
                    android:text="@string/agregarStaff"
                    android:textColor="@color/primario_texto" />

                <Button
                    android:id="@+id/btnAdminPeliculaPremio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_button"
                    android:onClick="irAPremios"
                    android:text="@string/agregarPremio"
                    android:textColor="@color/primario_texto" />
            </LinearLayout>

            <Button
                android:id="@+id/btnAdminPeliculaEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_button"
                android:gravity="center"
                android:onClick="eliminarPelicula"
                android:text="@string/eliminarPelicula"
                android:textColor="@color/primario_texto" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>